<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBD5C1"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:gravity="center"
        android:text="@string/txt_registrate"
        android:background="#4079BF"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:fontFamily="@font/fugaz_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_SU_Nombres"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/et_SU_Apellidos"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_apellidos"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <EditText
        android:id="@+id/et_SU_Correo"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/et_SU_Celular"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_celular"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <EditText
        android:id="@+id/et_SU_Contraseña"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_contraseña"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <Spinner
        android:id="@+id/spinner_SU"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/borde_redondo"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/btn_SU_Registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926"
        android:backgroundTint="#4079BF"
        app:cornerRadius="30dp"
        app:strokeColor="#000000"
        app:strokeWidth="1dp"/>

    <EditText
        android:id="@+id/et_SU_Usuario"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:background="@drawable/borde_redondo"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

</androidx.constraintlayout.widget.ConstraintLayout>